h2 추가 설정, baseTimeEntity 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=freelec-springboot2-webservice
 
-
 spring.jpa.show_sql=true
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+
 
 
 
