--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.application.name=freelec-springboot2-webservice
 
 spring.jpa.show_sql=true
 
-spring.h2.console.enabled=true
+# DATABASE
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
-
-
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
 
 
