work spring security and OAuth2로 구글 로그인 연동

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=freelec-springboot2-webservice
 
 spring.jpa.show_sql=true
+spring.jpa.hibernate.ddl-auto=create
 
 # DATABASE
 spring.h2.console.path=/h2-console
