work refactoring session store로 DB 사용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=freelec-springboot2-webservice
-
 spring.jpa.show_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create 
 
 # DATABASE
 spring.h2.console.path=/h2-console
@@ -12,4 +11,6 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 
 spring.profiles.include=oauth
+
+spring.session.store-type=jdbc 
 
